force-app/main/default/objects/pmdm__ServiceSchedule__c/fields/pmdm__AllDay__c.field-meta.xml
<CustomField>
    <fullName>pmdm__AllDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All day</label>
    <type>Checkbox</type>
</CustomField>