force-app/main/default/objects/pmdm__ServiceSchedule__c/fields/pmdm__CreateServiceSessionRecords__c.field-meta.xml
<CustomField>
    <fullName>pmdm__CreateServiceSessionRecords__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When selected, Service Session records will be automatically created.</inlineHelpText>
    <label>Create Service Sessions</label>
    <type>Checkbox</type>
</CustomField>