force-app/main/default/objects/pmdm__ServiceSchedule__c/fields/pmdm__DaysOfWeek__c.field-meta.xml
<CustomField>
    <fullName>pmdm__DaysOfWeek__c</fullName>
    <label>Days of the Week</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Sun</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Mon</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Tue</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Wed</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Thu</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Fri</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Sat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>