force-app/main/default/objects/pmdm__ServiceSchedule__c/fields/pmdm__FirstSessionEnd__c.field-meta.xml
<CustomField>
    <fullName>pmdm__FirstSessionEnd__c</fullName>
    <label>First Session End</label>
    <type>DateTime</type>
</CustomField>