force-app/main/default/objects/pmdm__ServiceSchedule__c/fields/pmdm__Frequency__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
                <default>true</default>
                <label>One Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>