force-app/main/default/objects/pmdm__ServiceSchedule__c/fields/pmdm__MonthlyRecurrenceOption__c.field-meta.xml
<CustomField>
    <fullName>pmdm__MonthlyRecurrenceOption__c</fullName>
    <label>Monthly Recurrence Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LastDayOfMonth</fullName>
                <label>on the Last Day</label>
            </value>
            <value>
                <fullName>1MO</fullName>
                <label>on the First Monday</label>
            </value>
            <value>
                <fullName>2MO</fullName>
                <label>on the Second Monday</label>
            </value>
            <value>
                <fullName>3MO</fullName>
                <label>on the Third Monday</label>
            </value>
            <value>
                <fullName>4MO</fullName>
                <label>on the Fourth Monday</label>
            </value>
            <value>
                <fullName>5MO</fullName>
                <label>on the Fifth Monday</label>
            </value>
            <value>
                <fullName>1TU</fullName>
                <label>on the First Tuesday</label>
            </value>
            <value>
                <fullName>2TU</fullName>
                <label>on the Second Tuesday</label>
            </value>
            <value>
                <fullName>3TU</fullName>
                <label>on the Third Tuesday</label>
            </value>
            <value>
                <fullName>4TU</fullName>
                <label>on the Fourth Tuesday</label>
            </value>
            <value>
                <fullName>5TU</fullName>
                <label>on the Fifth Tuesday</label>
            </value>
            <value>
                <fullName>1WE</fullName>
                <label>on the First Wednesday</label>
            </value>
            <value>
                <fullName>2WE</fullName>
                <label>on the Second Wednesday</label>
            </value>
            <value>
                <fullName>3WE</fullName>
                <label>on the Third Wednesday</label>
            </value>
            <value>
                <fullName>4WE</fullName>
                <label>on the Fourth Wednesday</label>
            </value>
            <value>
                <fullName>5WE</fullName>
                <label>on the Fifth Wednesday</label>
            </value>
            <value>
                <fullName>1TH</fullName>
                <label>on the First Thursday</label>
            </value>
            <value>
                <fullName>2TH</fullName>
                <label>on the Second Thursday</label>
            </value>
            <value>
                <fullName>3TH</fullName>
                <label>on the Third Thursday</label>
            </value>
            <value>
                <fullName>4TH</fullName>
                <label>on the Fourth Thursday</label>
            </value>
            <value>
                <fullName>5TH</fullName>
                <label>on the Fifth Thursday</label>
            </value>
            <value>
                <fullName>1FR</fullName>
                <label>on the First Friday</label>
            </value>
            <value>
                <fullName>2FR</fullName>
                <label>on the Second Friday</label>
            </value>
            <value>
                <fullName>3FR</fullName>
                <label>on the Third Friday</label>
            </value>
            <value>
                <fullName>4FR</fullName>
                <label>on the Fourth Friday</label>
            </value>
            <value>
                <fullName>5FR</fullName>
                <label>on the Fifth Friday</label>
            </value>
            <value>
                <fullName>1SA</fullName>
                <label>on the First Saturday</label>
            </value>
            <value>
                <fullName>2SA</fullName>
                <label>on the Second Saturday</label>
            </value>
            <value>
                <fullName>3SA</fullName>
                <label>on the Third Saturday</label>
            </value>
            <value>
                <fullName>4SA</fullName>
                <label>on the Fourth Saturday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>