force-app/main/default/objects/pmdm__ServiceSchedule__c/fields/pmdm__NumberOfServiceSessions__c.field-meta.xml
<CustomField>
    <fullName>pmdm__NumberOfServiceSessions__c</fullName>
    <label>Number of Service Sessions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>