force-app/main/default/objects/pmdm__ServiceSchedule__c/fields/pmdm__OtherServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>pmdm__OtherServiceProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Service Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Schedules (Other Service Provider)</relationshipLabel>
    <relationshipName>OtherServiceProviderSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>