force-app/main/default/objects/pmdm__ServiceSchedule__c/fields/pmdm__ParticipantCapacity__c.field-meta.xml
<CustomField>
    <fullName>pmdm__ParticipantCapacity__c</fullName>
    <label>Participant Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>