force-app/main/default/objects/pmdm__ServiceSchedule__c/fields/pmdm__PrimaryServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>pmdm__PrimaryServiceProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Service Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Schedules (Primary Service Provider)</relationshipLabel>
    <relationshipName>PrimaryServiceProviderSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>