force-app/main/default/objects/pmdm__ServiceSchedule__c/fields/pmdm__Service__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>pmdm__Service__c</referenceTo>
    <relationshipLabel>Service Schedules</relationshipLabel>
    <relationshipName>ServiceSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>