force-app/main/default/objects/pmdm__ServiceSchedule__c/fields/pmdm__ServiceScheduleEndDate__c.field-meta.xml
<CustomField>
    <fullName>pmdm__ServiceScheduleEndDate__c</fullName>
    <label>Service Schedule End Date</label>
    <type>Date</type>
</CustomField>