force-app/main/default/objects/pmdm__ServiceSchedule__c/fields/pmdm__ServiceScheduleEnds__c.field-meta.xml
<CustomField>
    <fullName>pmdm__ServiceScheduleEnds__c</fullName>
    <label>Service Schedule Ends</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>