force-app/main/default/objects/pmdm__ServiceSchedule__c/listViews/pmdm__All.listView-meta.xml
<ListView>
    <fullName>pmdm__All</fullName>
    <columns>NAME</columns>
    <columns>pmdm__Service__c</columns>
    <columns>pmdm__PrimaryServiceProvider__c</columns>
    <columns>pmdm__OtherServiceProvider__c</columns>
    <columns>pmdm__ParticipantCapacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>