force-app/main/default/objects/pmdm__ServiceSchedule__c/listViews/pmdm__UpcomingServiceSchedules.listView-meta.xml
<ListView>
    <fullName>pmdm__UpcomingServiceSchedules</fullName>
    <columns>NAME</columns>
    <columns>pmdm__Service__c</columns>
    <columns>pmdm__FirstSessionStart__c</columns>
    <columns>pmdm__ParticipantCapacity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pmdm__FirstSessionStart__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Service Schedules</label>
</ListView>